# ResearchPapers-Manager

./: .dockerignore  .env.example  .gitignore  DEMO_VIDEO.md  Dockerfile  Makefile  QUESTION.md  README.md  docker-compose.yml  pyproject.toml  wsgi.py
app/: config.py  extensions.py  factory.py  scheduler.py
app/api/: admin.py  auth.py  health.py  papers.py
app/db/: indexes.py
app/models/: paper.py  user.py
app/services/: view_sync.py
app/utils/: auth.py  cache.py  paper_validation.py  password.py  validation.py
posting-collection/: health.posting.yaml
posting-collection/admin/: sync_now.posting.yaml  sync_status.posting.yaml
posting-collection/auth/: login.posting.yaml  signup.posting.yaml
posting-collection/papers/: detail.posting.yaml  search_advanced.posting.yaml  upload-paper-iot.posting.yaml  upload.posting.yaml  upload_with_citations.posting.yaml
scripts/: seed_data.py  test_complete.py  wait_for_services.sh
