[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "research-papers-manager"
version = "0.1.0"
description = "University Paper Manager Flask app with MongoDB & Redis"
requires-python = ">=3.11"
dependencies = [
  "flask==3.0.3",
  "pymongo==4.8.0",
  "redis==5.0.8",
  "bcrypt==4.1.2",
  "apscheduler==3.10.4",
  "faker==22.0.0",
  "python-dotenv==1.0.1",
  "requests",
  "gunicorn==21.2.0",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pyright]
pythonVersion = "3.11"

typeCheckingMode = "basic"
